fixed bottom vertical scrollbar

--- a/homepage/static/styles.css
+++ b/homepage/static/styles.css
@@ -1,3 +1,7 @@
+* {
+        outline: 1px solid red;
+}
+
 input {
     position: absolute;
     z-index: 1;
@@ -5,8 +9,8 @@ input {
 
 
 #foreground-container {
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
     position: absolute;
     z-index: 1;
     width: 97%;
@@ -39,6 +43,10 @@ input {
     left: 0;
     z-index: 0;
     transition: opacity 2s;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #canvas1:hover {
@@ -58,7 +66,7 @@ input {
     bottom: 0px;
     left: 10%;
     right: 10%;
-    width: 80%;
+    width: 70%;
 }
 
 #color-slider-container {
@@ -66,7 +74,7 @@ input {
     bottom: 0px;
     left: 10%;
     right: 10%;
-    width: 82%;
+    width: 75%;
     height: 30px;
     background-color: hsla(200, 80%, 22%, 0.6);
     border: 1px solid #222;
